apps/base/pocket-id/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pocket-id
  labels:
    app.kubernetes.io/name: pocket-id
    gateway.excloo.dev/private-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
